my first assignment

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/assignment.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="navber">
+            <div>
+                <h2 class="navber-text">Bangladesh 2.0</h2>
+            </div>
+            <div class="navber-btn">
+                <button class="btn">Sing in</button>
+            </div>
+
+        </div>
+        <div class="banner-container">
+
+        </div>
+
+    </header>
+    <main>
+
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
