--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
             </div>
 
         </div>
-        <div class="banner-container">
+        <div class="banner">
+           <div class="banner-container">
+            <h5 class="banner-text">Bangladesh 2.0</h5>
+            <h2 class="banner-description">Idea , innovation ,
+                vision and challenges in New Bangladesh.</h2>
+           </div>
+           <img src="assets/hero.png" alt="pic">
+
 
         </div>
+        
 
     </header>
     <main>
