--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style/assignment.css">
 </head>
 
@@ -20,16 +25,17 @@
 
         </div>
         <div class="banner">
-           <div class="banner-container">
-            <h5 class="banner-text">Bangladesh 2.0</h5>
-            <h2 class="banner-description">Idea , innovation ,
-                vision and challenges in New Bangladesh.</h2>
-           </div>
-           <img src="assets/hero.png" alt="pic">
+            <div class="banner-contant">
+                <h5 class="banner-text">Bangladesh 2.0</h5>
+                <h2 class="banner-description">Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h2>
+                <button class="Explore-btn">Explore New Bangladesh</button>
+            </div> 
+            <img src="assets/hero.png" alt="pic">
 
 
         </div>
-        
+
 
     </header>
     <main>
